--- a/.github/workflows/openapi-generate.yaml
+++ b/.github/workflows/openapi-generate.yaml
@@ -2,34 +2,36 @@ name: openapi-generate-cli
 
 on:
   push:
-    branches: [ master ]
-    paths: petstore.yaml
+    branches:
+      - master
+    paths: 
+      - 'petstore.yaml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-    - uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: myoshi1012/openapi-client-repo
-        path: client
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: myoshi1012/openapi-client-repo
+          path: client
 
-    # openapi generate
-    - uses: docker://openapitools/openapi-generator-cli
-      with:
-        args: generate -i ./petstore.yaml -g typescript-axios -o ./client/
+      # openapi generate
+      - uses: docker://openapitools/openapi-generator-cli
+        with:
+          args: generate -i ./petstore.yaml -g typescript-axios -o ./client/
 
-    # Create pull request
-    - uses: peter-evans/create-pull-request@v2
-      with:
-        token: ${{ secrets.REPO_ACCESS_TOKEN }}
-        path: client
-        commit-message: update client
-        title: update client
-        body: update client
-        branch: feature/update_client
-        branch-suffix: short-commit-hash # 同じプルリクは作らない
+      # Create pull request
+      - uses: peter-evans/create-pull-request@v2
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          path: client
+          commit-message: update client
+          title: update client
+          body: update client
+          branch: feature/update_client
+          branch-suffix: short-commit-hash # 同じプルリクは作らない
