--- a/.github/workflows/openapi-generate.yaml
+++ b/.github/workflows/openapi-generate.yaml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: myoshi1012/openapi-client-repo
           path: client
 
