fix generate path

--- a/.github/workflows/openapi-generate.yaml
+++ b/.github/workflows/openapi-generate.yaml
@@ -27,7 +27,7 @@ jobs:
             generate 
             -i ./petstore.yaml 
             -g typescript-axios 
-            -o ./client/
+            -o ./client/autogen
 
       - name: Grant file permissions
         run: |
